# Github-Search-Engine

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-and-release-docs.yaml  rebase-dev.yaml  release.yaml  run-tests.yaml
docs/source/: conf.py  index.rst
docs/source/custom/pre-modules/: introduction.md
examples/: api_example.py  basic_example.py
github_search_engine/: __init__.py  cli.py  github_search_engine.py
github_search_engine/_api/: __init__.py  api.py
github_search_engine/_cli/: __init__.py
github_search_engine/_cli/commands/: __init__.py  api_command.py  index_command.py  search_command.py  utils.py
github_search_engine/clients/: github_client_manager.py  ollama_client_manager.py
